# odb-example

./: .gitignore  CMakeLists.txt
changelog/: my-scheme.xml
cmake/Modules/: UseODB.cmake  Utils.cmake
config/: config.yaml
include/odb-example/: constants.h  hxx_prologue.h  objects.h  odb.h  odb_prologue.h  version.h
include/odb-example/objects/: user.h  user_settings.h
scripts/: install-deps.sh
src/objects/: user.cpp  user_settings.cpp
